--- a/projects/my-wordpress-site/config/nginx/default.conf
+++ b/projects/my-wordpress-site/config/nginx/default.conf
@@ -1,20 +1,28 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name wp1.localhost;
     client_max_body_size 2048M;
     root /var/www/html;
-    index index.php index.html;
+    index index.php index.html index.htm;
+    
+    # logs
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 
     location / {
         try_files $uri $uri/ /index.php?$args;
     }
 
     location ~ \.php$ {
-        # 'php' — это имя нашего сервиса PHP-FPM
+        # 'php' — is a PHP-FPM service name
         fastcgi_pass php:9000; 
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+    
+    location ~ /\. {
+        deny all;
     }
 }
