feat(devops): introduce scalable wordpress boilerplate and site creation script
this commit modularizes the local development environment by converting the initial static wordpress setup into a reusable boilerplate project and a script for automatic deployment.

key changes:
- renamed the base project to  (boilerplate).
- added  for one-command site creation (handles unique container names, Traefik labels, environment variables, and volumes).
- updated  to use generic, neutral names for all services and domains.
- phpmyadmin is now routed dynamically via Traefik (e.g., ), removing local port conflicts and ensuring HTTPS access.
- implemented logic in the script to handle dynamic replacement of all neutral template names with the new project name.

ready to easily spin up new WordPress instances

--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,10 @@
 !projects/**
 !traefik/**
 
-# 5. Allow /html/index.txt to keep the html folder exist
-projects/my-wordpress-site/html/*
-!projects/my-wordpress-site/html/index.txt
+# 5. Allow template & automatation script
+!projects/wp-template/
+!prejects/wp-template/**
+!projects/create_wp_site.sh
 
 # 6. Allow /logs/index.txt to keep the logs folder exist
 traefik/logs/*
